WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232591
[Curl] Fix -Wreorder-ctor in CurlRequest
https://bugs.webkit.org/show_bug.cgi?id=232591
Summary
[Curl] Fix -Wreorder-ctor in CurlRequest
Don Olmstead
Reported
2021-11-01 16:11:22 PDT
New Clang 13 warning [2779/6831] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/platform/network/curl/CurlRequest.cpp.o ../../Source/WebCore/platform/network/curl/CurlRequest.cpp:49:7: warning: field 'm_startState' will be initialized after field 'm_enableMultipart' [-Wreorder-ctor] , m_startState(shouldSuspend == ShouldSuspend::Yes ? StartState::StartSuspended : StartState::WaitingForStart) ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ m_enableMultipart(enableMultipart == EnableMultipart::Yes)
Attachments
Patch
(1.63 KB, patch)
2021-11-01 16:15 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2021-11-01 16:15:40 PDT
Created
attachment 443030
[details]
Patch
EWS
Comment 2
2021-11-01 20:25:37 PDT
Committed
r285151
(
243788@main
): <
https://commits.webkit.org/243788@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443030
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-01 20:26:17 PDT
<
rdar://problem/84913054
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug