[Curl] Fix -Wreorder-ctor in CurlRequest https://bugs.webkit.org/show_bug.cgi?id=232591

Reviewed by Ross Kirsling.

Reorder member initializer list in CurlRequest::CurlRequest to follow the ordering of
members in its declaration.

* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::CurlRequest):



Canonical link: https://commits.webkit.org/243788@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285151 268f45cc-cd09-0410-ab3c-d52691b4dbfc